workspace-sf/force-app/main/default/objects/PremioMinimoProduto__c/PremioMinimoProduto__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as regras de prêmio mínimo do produto</description>
    <label>Forma de pagamento e Prêmio Mínimo</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formas de pagamentos e Prêmios Mínimos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>