workspace-sf/force-app/main/default/objects/PremioMinimoProduto__c/fields/CodReguaCobranca__c.field-meta.xml
<CustomField>
    <fullName>CodReguaCobranca__c</fullName>
    <label>Código da régua de cobrança (SAP)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>