workspace-sf/force-app/main/default/objects/PremioMinimoProduto__c/fields/PeriodicidadePagamento__c.field-meta.xml
<CustomField>
    <fullName>PeriodicidadePagamento__c</fullName>
    <label>Periodicidade de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anual</fullName>
            </value>
            <value>
                <fullName>Mensal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>