workspace-sf/force-app/main/default/objects/PremioMinimoProduto__c/fields/PremioMinimoParcela__c.field-meta.xml
<CustomField>
    <fullName>PremioMinimoParcela__c</fullName>
    <label>Prêmio mínimo por parcela</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>