workspace-sf/force-app/main/default/objects/PremioMinimoProduto__c/fields/PremioMinimoProduto__c.field-meta.xml
<CustomField>
    <fullName>PremioMinimoProduto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prêmio minimo do produto</label>
    <referenceTo>PremioMinimoProduto__c</referenceTo>
    <relationshipName>PremiosMinimoProduto</relationshipName>
    <type>Lookup</type>
</CustomField>