workspace-sf/force-app/main/default/objects/PremioMinimoProduto__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>PremiosMinimoProduto</relationshipName>
    <type>Lookup</type>
</CustomField>