workspace-sf/force-app/main/default/objects/PremioMinimoProduto__c/fields/TipoContratacao__c.field-meta.xml
<CustomField>
    <fullName>TipoContratacao__c</fullName>
    <label>Tipo de contratação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endosso</fullName>
            </value>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Renovação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>