workspace-sf/force-app/main/default/objects/PremioMinimoProduto__c/fields/ValidarRegrasProdutoComercial__c.field-meta.xml
<CustomField>
    <fullName>ValidarRegrasProdutoComercial__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Validar regras produto comercial</label>
    <type>Checkbox</type>
</CustomField>