workspace-sf/force-app/main/default/objects/PremioMinimoProduto__c/validationRules/Valida_Tipo_Registro.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Tipo_Registro</fullName>
    <active>false</active>
    <errorConditionFormula>RecordType.Name !=  Produto__r.RecordType.Name</errorConditionFormula>
    <errorMessage>O Tipo de registro deve ser o mesmo do objeto &quot;Produto&quot;</errorMessage>
</ValidationRule>