workspace-sf/force-app/main/default/objects/PremioMinimoProduto__c/validationRules/ValidaCriacaoProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaCriacaoProdutoComercial</fullName>
    <active>false</active>
    <description>Não permite criar novo prêmio para produto comercial</description>
    <errorConditionFormula>AND( 
 	RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
ValidarRegrasProdutoComercial__c,
 	 ISNEW() 
 )</errorConditionFormula>
    <errorMessage>Não é permitido criar novos prêmios para produto comercial.</errorMessage>
</ValidationRule>