workspace-sf/force-app/main/default/objects/PremioMinimoProduto__c/validationRules/ValidaPremioProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaPremioProdutoComercial</fullName>
    <active>true</active>
    <description>Não permite que o prêmio seja menor que o prêmio cadastrado no produto técnico</description>
    <errorConditionFormula>AND( 
 	RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
 	PremioMinimoParcela__c&lt; PremioMinimoProduto__r.PremioMinimoParcela__c
 )</errorConditionFormula>
    <errorMessage>Valor de prêmio mínimo por parcela inválido! Não pode ser menor do que o valor cadastrado no produto técnico.</errorMessage>
</ValidationRule>